# mavedb-api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Dockerfile.worker  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  generate_openapi_json.py  main.py  openapi.json  pyproject.toml  requirements.txt  ruff.toml
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  copilot-instructions.md  instructions.instructions.md  markdown.instructions.md  prompt.instructions.md  python.instructions.md
.github/prompts/: prompt-builder.prompt.md
.github/workflows/: run-tests-on-push.yml
alembic/: alembic_helpers.py  env.py
alembic/manual_migrations/: README  migrate_consolidated_score_ranges_and_calibrations.py  migrate_jsonb_ranges_to_table_rows.py  migrate_non_api_like_constants.py  migrate_score_ranges_to_calibrations.py  migrate_single_target_endogenous_edit_transcripts_to_be_fully_qualified.py  migrate_target_organism_to_taxonomy.py  populate_taxonomy_table.py  refresh_published_tmp_urns.py
alembic/versions/: 002f6f9ec7ac_add_score_calibration_table.py  00dab0f5f498_add_external_links_property_to_.py  019eb75ad9ae_rename_tax_id_to_code.py  03c7124c33e1_target_category_enum.py  0520dfa9f2db_rename_functional_ranges_to_functional_.py  0b29eefbe1dd_controlled_keyword_modification.py  0d3732aa62be_add_scoreset_search_materialized_view.py  16beeb593513_add_acmg_classification_and_functional_.py  18b6d81c045e_controlled_keyword_gene_ontology.py  194cfebabe32_rename_wild_type_sequence.py  1cee01c42909_make_index_on_contributors_unique.py  1d4933b4b6f7_merge_76e1e55bc5c1_and_d7e6f8c3b9dc.py  1e08b947679d_add_functional_consequence.py  22e2d92d602e_add_publication_identifier_metadata_.py  2b6f40ea2fb6_add_score_range_column.py  2b7a977e7e98_make_faf95_max_and_ancestry_possibly_.py  2c8d7e2bf2fe_consolidate_publication_identifier_dois.py  33e99d4b90cc_add_mapped_variants_table.py  34026092c7f8_clinvar_variant_table.py  369b839e8ffd_.py  377bb8c30bde_roles_as_enums_access_keys_can_have_.py  44a45d616036_make_index_on_users_unique.py  44d5c568f64b_simplify_reference_genome_target_.py  4726e4dddde8_simplify_published_variants_mv_indexes.py  47338d1d0532_controlled_keywords.py  4b9fb51a460d_add_uniprot_id_field_for_mapped_metadata.py  5cad62af3705_rename_pubmed_identifiers_table_to_publication_identifiers.py  60103ad1cb5b_add_target_sequence_label.py  68a0ec57694e_add_active_column_to_licenses.py  695b73abe581_genericize_clinvar_variants_table.py  6c16989489bd_add_missing_indices.py  6fae83d65ee4_taxonomy.py  76e1e55bc5c1_add_contributors.py  79b28316dd0c_add_gnomad_variants_table.py  7a345f1bf9c3_unify_publication_identifier_date_fields.py  7c37c18e3246_taxonomy.py  886e059ad1a8_score_set_processing_errors.py  8bcb2b4edc60_add_foreign_key_indices.py  8de33cc35cd7_add_pipeline_and_job_tracking_tables.py  8e26f1a1160d_add_is_first_login_column_to_user_model.py  (+31 more)
app/: deps.py
app/crud/: __init__.py  base.py  crud_experiment.py  crud_scoreset.py  crud_variant.py
app/db/: base.py  session.py
app/lib/: array_comparison.py  auth.py  authentication.py  authorization.py  exceptions.py  experiments.py  identifiers.py  scoresets.py  urns.py  worker.py
app/models/: __init__.py  access_key.py  doi_identifier.py  ensembl_identifier.py  ensembl_offset.py  experiment.py  experiment_set.py  failed_task.py  genome_identifier.py  keyword.py  pubmed_identifier.py  raw_read_identifier.py  reference_genome.py  reference_map.py  refseq_identifier.py  refseq_offset.py  role.py  scoreset.py  sra_identifier.py  target_gene.py  uniprot_identifier.py  uniprot_offset.py  user.py  variant.py  wild_type_sequence.py
app/routers/: access_keys.py  auth.py  doi_identifiers.py  experiment_sets.py  experiments.py  pubmed_identifiers.py  raw_read_identifiers.py  reference_genomes.py  scoresets.py  search.py  target_gene_identifiers.py  target_genes.py  users.py
app/tasks/: scoreset_tasks.py
app/tests/: setup.py
app/view_models/: access_key.py  doi_identifier.py  experiment.py  experiment_set.py  external_gene_identifier.py  external_gene_identifier_offset.py  pubmed_identifier.py  raw_read_identifier.py  reference_genome.py  reference_map.py  scoreset.py  search.py  target_gene.py  user.py  variant.py  wild_type_sequence.py
mypy_stubs/: README.md
mypy_stubs/bioutils/: accessions.pyi  assemblies.pyi
mypy_stubs/cdot/: assembly_helper.pyi
mypy_stubs/hgvs/: .exceptions.pyi.swp  __init__.py  exceptions.pyi  parser.pyi  sequencevariant.pyi  validator.pyi
mypy_stubs/idutils/: README.md  __init__.pyi
mypy_stubs/mavehgvs/: README.md  __init__.py  exceptions.pyi  position.pyi  variant.pyi
settings/: .env.dev  .env.template
src/: deps.py
src/db/: session.py
src/lib/: authentication.py  authorization.py  exceptions.py  experiments.py  identifiers.py  scoresets.py  urns.py  worker.py
src/mavedb/: __init__.py  constants.py  deps.py  server_main.py
src/models/: __init__.py  access_key.py  controlled_keyword.py  doi_identifier.py  ensembl_identifier.py  ensembl_offset.py  experiment.py  experiment_set.py  failed_task.py  genome_identifier.py  keyword.py  legacy_keyword.py  pubmed_identifier.py  raw_read_identifier.py  reference_genome.py  reference_map.py  refseq_identifier.py  refseq_offset.py  role.py  scoreset.py  target_gene.py  uniprot_identifier.py  uniprot_offset.py  user.py  variant.py  wild_type_sequence.py
src/routers/: access_keys.py  doi_identifiers.py  experiment_sets.py  experiments.py  keywords.py  pubmed_identifiers.py  raw_read_identifiers.py  reference_genomes.py  scoresets.py  target_gene_identifiers.py  target_genes.py  users.py
src/tasks/: scoreset_tasks.py
src/tests/: setup.py
src/view_models/: access_key.py  doi_identifier.py  experiment.py  experiment_set.py  external_gene_identifier.py  external_gene_identifier_offset.py  keyword.py  pubmed_identifier.py  raw_read_identifier.py  reference_map.py  scoreset.py  (+4 more)
tests/: conftest.py  conftest_optional.py  dump_rels.py
(+663 files in other folders)
