[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mavedb"
dynamic = ["version"]
description = "API for MaveDB, the database of Multiplexed Assays of Variant Effect."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "fqfa~=1.2.3",
    "pyhumps~=3.8.0",
    "IDUtils~=1.2.0",
    "mavehgvs~=0.6.0",
    "eutils~=0.6.0",
    "hgvs~=1.5.4",
    "biocommons~=0.0.0",
    "cdot~=0.2.21",
    "numpy~=1.22",
    "pandas~=1.4.1",
    "pydantic~=1.10",
    "python-dotenv~=0.20.0",
    "SQLAlchemy~=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage[toml]~=7.4.3",
    "flake8",
    "pre-commit",
    "pytest~=7.0.1",
    "pytest-postgresql~=5.0.0",
    "jsonschema",
    "httpx~=0.26.0",
    "requests-mock~=1.11.0",
    "pytest-cov~=4.1.0",
    "pytest-socket~=0.6.0",
]
server = [
    "alembic~=1.7.6",
    "authlib~=0.15.5",
    "cryptography~=41.0.6",
    "celery~=5.2.3",
    "fastapi~=0.95.0",
    "orcid~=1.0.3",
    "psycopg2~=2.9.3",
    "python-jose[cryptography]~=3.3.0",
    "python-multipart~=0.0.5",
    "requests~=2.31.0",
    "slack-sdk~=3.21.3",
    "starlette~=0.27.0",
    "uvicorn[standard]",
]

[project.urls]
repository = "https://github.com/VariantEffect/mavedb-api"
documentation = "https://mavedb.org/docs/mavedb/"

[tool.black]
extend-exclude = "alembic/versions"
line-length = 120

[tool.hatch]
metadata.allow-direct-references = true

[tool.hatch.version]
path = "src/mavedb/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "docker-compose-dev.yml",
    "docker-compose-prod.yml",
    "docs/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mavedb"]

[tool.pytest.ini_options]
addopts = "-v -rP --import-mode=importlib --disable-socket --allow-hosts localhost --cov"
testpaths = "tests/"
norecursedirs = "tests/helpers/"
# Uncomment the following lines to include application log output in Pytest logs.
# log_cli = true
# log_cli_level = "DEBUG"

[tool.coverage.run]
source = [ "src/" ]

[tool.coverage.report]
skip_covered = true
skip_empty = true
sort = "-Cover"
